--- a/web-interface/nginx/nginx.conf
+++ b/web-interface/nginx/nginx.conf
@@ -7,6 +7,7 @@ http {
     listen 80;
     server_name localhost;
     autoindex on;
+    include /etc/nginx/mime.types;
 
     # Redirect all HTTP requests to HTTPS
     #return 301 https://$host$request_uri;
@@ -31,8 +32,17 @@ http {
     # Serve static files directly from Nginx3
     location /static/ {
         alias /usr/share/nginx/static/;
-        try_files $uri $uri/ =404;
+        expires 30d;
+        access_log off;
+        add_header Cache-Control "public, no-transform";
 
+        types {
+            text/css css;
+            application/javascript js;
+            image/svg+xml svg;
+            font/woff woff;
+            font/woff2 woff2;
+        }
     }
 
 
