--- a/web-interface/nginx/nginx.conf
+++ b/web-interface/nginx/nginx.conf
@@ -48,7 +48,7 @@ http {
 
     # Proxy WebSocket connections to the backend service
     location /ws/ {
-      proxy_pass http://localhost:8000;
+      proxy_pass http://web:8000;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
@@ -56,5 +56,6 @@ http {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
   }
 }
