Modified the Layouts for more comprehensive Navigation:
Co-Authored by: anpaz24, JustS0m3Guy

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@
 /asp_net_core/bin
 /asp_net_core/obj
 
+/bin/Release
+/certs
+/WebTest/.vs
+/WebTest/WebTests/bin/Debug/net8.0
+/WebTest/WebTests/bin/Release/net8.0/cs
+/wifi_sim/wifi2ble/.vscode
+/WebTest/WebTests/bin/Release/net8.0
