--- a/asp_net_core/appsettings.Development.json
+++ b/asp_net_core/appsettings.Development.json
@@ -9,5 +9,13 @@
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
+  },
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "certs/servercert.pfx",
+        "Password": "pfxPassword"
+      }
+    }
   }
 }
