--- a/asp_net_core/asp_net_core.csproj
+++ b/asp_net_core/asp_net_core.csproj
@@ -25,4 +25,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebTest\WebTests\WebTests.csproj" />
+  </ItemGroup>
+
 </Project>
