--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,20 @@
 /.idea
 /.vs
 /web-interface/wifi2ble_sim/simulator/__pycache__
+/asp_net_core/bin
+/bin
+/obj
+*.pfx
+/WebTest/.vs
+/WebTest/WebTests/bin
+/WebTest/WebTests/obj/Debug/net8.0
+/WebTest/WebTests/obj/Release/net8.0
+/WebTest/WebTests/obj/project.assets.json
+/WebTest/WebTests/obj/project.nuget.cache
+/WebTest/WebTests/obj/WebTests.csproj.nuget.dgspec.json
+/WebTest/WebTests/obj/WebTests.csproj.nuget.g.targets
+/WebTest/WebTests/obj/WebTests.csproj.nuget.g.props
+/wifi_sim/wifi2ble/.idea
+/wifi_sim/wifi2ble/.vscode
+/wifi_sim/wifi2ble/simulator/__pycache__
+/asp_net_core/obj
