added mysql support

--- a/asp_net_core/appsettings.Development.json
+++ b/asp_net_core/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=localhost,1434;Database=AspNetCoreApp;User Id=sa;Password=Admin@1234;TrustServerCertificate=True;"
-    "DefaultConnection": "Data Source=db.sqlite"
+    "DefaultConnection": "Server=my_sql;Port=3306;Database=AspNetDatabase;Uid=root;Pwd=markloh;"
   },
   "Logging": {
     "LogLevel": {
