Tried some more stuff, cannot receive data from the subscribed topic

--- a/asp_net_core/appsettings.json
+++ b/asp_net_core/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=my_sql;Port=3306;Database=AspNetDatabase;Uid=root;Pwd=markloh;"
   },
+  "MosquittoConfig": {
+    "BrokerAddress": "mosquitto",
+    "BrokerPort": 1883,
+    "Username": "Admin",
+    "Password": "Pass1234!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
